influxdb/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
        - name: influxdb
          image: influxdb:2.7.0
          ports:
            - containerPort: 8086
          volumeMounts:
            - mountPath: /var/lib/influxdb2
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: influxdb-pvc
