influxdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8086
  selector:
    app: influxdb
